# jetracer_description

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  setup.cfg  setup.py
config/: jetracer_simple.rviz  jetracer_working.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/jetracer_description/lib/jetracer_description/: ackermann_controller  simple_wasd_controller
install/jetracer_description/share/jetracer_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/jetracer_description/share/jetracer_description/config/: jetracer.rviz  jetracer_working.rviz
install/jetracer_description/share/jetracer_description/launch/: display.launch.py  display_simple.launch.py  display_with_control.launch.py  display_working.launch.py  gazebo.launch.py  gz_sim.launch.py  jetracer_simulation.launch.py  teleop.launch.py  teleop_simple.launch.py
install/jetracer_description/share/jetracer_description/urdf/: jetracer_materials.xacro
install/jetracer_description/share/jetracer_description/worlds/: jetracer_world.world
jetracer_description/: ackermann_controller.py  simple_controller.py  simple_wasd_controller.py
launch/: display_basic.launch.py  display_teleop.launch.py  display_wasd.launch.py  gazebo_empty.launch.py  teleop.launch.py  teleop_keyboard.launch.py
log/: latest_build  latest_list
scripts/: ackermann_controller.py  run_teleop.sh
urdf/: jetracer.xacro  jetracer_properties.xacro
